<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We Will help you to find your way</string>
    <string name="powered_by">Powered By Harsh Harsora</string>


    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>


    <string name="first_slide_desc">you can search any place nearby or with in the specified city will display specific of all shops to match search</string>
    <string name="second_slide_desc">It\'s important your cell phone has service and is able to make calls.</string>
    <string name="third_slide_desc"> The place shows publicly once it\'s added. Places you can add include landmarks, coffee shops, or other local ...</string>
    <string name="fourth_slide_desc">You can use this phrase whenever you want to tell someone to relax, watch something, and simply enjoy what they are seeing</string>


    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let Get Started</string>

    <!-- string for deashbord-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!-- title and description-->
    <string name="featured_locations">All Featured Location</string>
    <string name="featured_locations_description">All the location that are featured and have the top demand in town! </string>
    <string name="most_viewed_location">Most viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search....</string>
    <string name="education">Education</string>
    <string name="mcdonald_s">McDonald\'s</string>

    <!-- reatiler pennel-->
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help to grow your business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we Work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>

    <string name="mcdonald">McDonald\'s Corporation is an American multinational fast food chain founded in 1940 as a restaurant operated by Richard and Maurice McDonald</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="add_missing_place">Add Missing Place</string>
    <string name="profile">Profile</string>
    <string name="login_name">Login</string>
    <string name="logout">Logout</string>
    <string name="categorie">Categories</string>
    <string name="resturants">Resturants</string>
    <string name="bank">Bank</string>
    <string name="educatio">Education</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="create_accoun">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">Select Your Age</string>


    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description">Enter one time password sent on +91 7862884380</string>
    <string name="forget_password_detail">Provide Account\'s Email for which you want to reset your password</string>

    <string name="make_selection_detail">Select which contact detail should we use to reset your password</string>
    <string name="make_selection">Make Selection</string>
    <string name="via_sms">Via Sms</string>
    <string name="via_mail">Via Mail</string>
    <string name="support_gmail_com">support@gmail.com</string>
    <string name="new_credentials">New\nCredentials</string>
    <string name="new_credentials_detail">Your Identity Has been verified! set your new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">oK</string>
    <string name="password_updated">Password\nUpdated</string>
    <string name="password_updated_msg">Your Password Has beenUpdated!</string>
    <string name="car_rent">Car Rent</string>
    <string name="expond_all">Expond All</string>
    <string name="hospitals">Hospitals</string>


</resources>