<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.RetailerStartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_marginTop="30dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/black_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_marginTop="120dp"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/mulish_light"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:background="@color/colorPrimary"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginRight="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textColor="@color/black"
            android:background="#00000000"
            android:text="@string/how_we_work" />
    </LinearLayout>
</ScrollView>